--- a/car.html
+++ b/car.html
@@ -18,7 +18,7 @@ This is a sample template for implementing live blogs in AMP.
 
 <head>
     <meta charset="utf-8">
-    <title>Minnowspace</title>
+    <title>Live Blog</title>
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <!-- ## Setup -->
     <!-- Import `amp-social-share` for adding share buttons-->
@@ -524,10 +524,10 @@ This is a sample template for implementing live blogs in AMP.
 
 <body>
     <section class="heading">
-        <h1>Minnowspace</h1>
+        <h1>Minnow's Auto Blog</h1>
         <p><small class="date">Wed December 5 2024</small></p>
         <p><small>by Brian Ebel</small></p>
-        <p id="summary">Minnow's Corner of the Internet.</p>
+        <p id="summary">Autoblog covering all makes and highlighting the best models for your money.</p>
     </section>
     <!-- ## Blog Posts -->
     <!-- Use amp-live-list to implement a live blog. The amp-live-list component regularly polls the host document for updated content and updates the end user's browser as new items become available. This means that every time a new post needs to be added, the host document should be updated by the CMS to include the update both the body and the metadata section. Find an amp-live-list example [here](/documentation/examples/components/amp-live-list/).
@@ -541,11 +541,11 @@ This is a sample template for implementing live blogs in AMP.
 
             <div id="1" data-sort-time="1733360841026">
                 <div class="blog">
-                    <amp-img src="me.jpg" layout="responsive" width="30"
-                        height="30">
+                    <amp-img src="car.jpg" layout="responsive" width="30"
+                        height="20">
                     </amp-img>
                     <p class="date">12/5/2024</p>
-                    <p class="text">Brian Ebel.</p>
+                    <p class="text">Red Alfa Romeo C4.</p>
                     <p class="social-share">
                         <amp-social-share type="twitter" width="45" height="33"
                             data-param-url="AMPDOC_URL#1"></amp-social-share>
