--- a/stories.amp.html
+++ b/stories.amp.html
@@ -3207,7 +3207,7 @@ limitations under the License.
 
     .land-see-blockquote:before {
       content: '';
-      background: url(../img/land-see/structure/green-up-full-20.svg) 0 0/198px 156px no-repeat;
+      background: url(./img/land-see/structure/green-up-full-20.svg) 0 0/198px 156px no-repeat;
       position: absolute;
       top: 50%;
       left: 1rem;
@@ -3272,7 +3272,7 @@ limitations under the License.
     .land-see-instagram>h3 span:before {
       content: '';
       position: absolute;
-      background: url(../img/icons/instagram.svg) -5px -3px/35px 35px no-repeat;
+      background: url(./img/icons/instagram.svg) -5px -3px/35px 35px no-repeat;
       height: 29px;
       width: 29px;
       top: 0;
@@ -3847,7 +3847,7 @@ limitations under the License.
     <amp-position-observer on="scroll:subscribeBGParallax.seekTo(percent=event.percent)" layout="nodisplay">
     </amp-position-observer>
     <amp-img alt="A view of the sea, see?" class="land-see-subscribe-bg cover" layout="fixed-height" height="679"
-      src="../img/land-see/content/khatam-tadayon-107740.jpg">
+      src="./img/land-see/content/khatam-tadayon-107740.jpg">
     </amp-img>
   </div>
 
