--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ limitations under the License.
 <head>
   <meta charset="utf-8" />
   <title>MINNOWSPACE</title>
-  <link rel="canonical" href="https://www.ampstart.com/templates/land-see/land-see.amp" />
+  <link rel="canonical" href="index.html" />
   <meta name="viewport" content="width=device-width" />
   <meta name="amp-google-client-id-api" content="googleanalytics" />
 
@@ -3392,7 +3392,7 @@ limitations under the License.
       class="ampstart-navbar-trigger md-hide lg-hide pr2">
       ☰
     </div>
-    <a href="land-see.amp.html" class="text-decoration-none inline-block mx-auto ampstart-headerbar-home-link">
+    <a href="index.html" class="text-decoration-none inline-block mx-auto ampstart-headerbar-home-link">
       <div class="ampstart-headerbar-title mx-auto">MINNOWSPACE</div>
     </a>
     <nav class="ampstart-headerbar-nav ampstart-nav xs-hide sm-hide">
@@ -3871,7 +3871,7 @@ limitations under the License.
 
   <div class="land-see-subscribe center items-center max-width-4 mx-auto m0 mb3 z1">
     <div class="land-see-subscribe-form z2">
-      <form method="GET" action="land-see.amp.html" target="_top" class="p0 m0 px3 mb4">
+      <form method="GET" action="index.html" target="_top" class="p0 m0 px3 mb4">
         <fieldset class="border-none p0 m0">
           <h2 class="land-see-subs-heading-text">
             Weekly inspiration from <span class="bold">Land+See</span>
@@ -3966,7 +3966,7 @@ limitations under the License.
     </nav>
     <small>
       © MINNOWSPACE, 2017 •
-      <a class="text-decoration-none" href="#">Terms &amp; Conditions</a>
+      <a class="text-decoration-none" href="index.html">Terms &amp; Conditions</a>
     </small>
   </footer>
   <!-- End Footer -->
