--- a/land-see.amp.html
+++ b/land-see.amp.html
@@ -3497,7 +3497,6 @@ limitations under the License.
         </li>
         <li class="ampstart-nav-item "><a <a href="home.amp.html" class="text-decoration-none block">Shop</a></li>
         <li class="ampstart-nav-item "><a href="#" class="text-decoration-none block">About</a></li>
-        <li class="ampstart-nav-item "><a href="#" class="text-decoration-none block">Contact</a></li>
       </ul>
     </nav>
     <!--
@@ -3570,8 +3569,6 @@ limitations under the License.
             href="home.amp.html">Shop</a></li>
         <li class="ampstart-nav-item land-see-sidebar-nav-item ampstart-title-sm bold"><a class="ampstart-nav-link"
             href="#">About</a></li>
-        <li class="ampstart-nav-item land-see-sidebar-nav-item ampstart-title-sm bold"><a class="ampstart-nav-link"
-            href="#">Contact</a></li>
       </ul>
     </nav>
 
@@ -3659,8 +3656,9 @@ limitations under the License.
             <h1 class="land-see-hero-title ampstart-title-md"><a class="text-decoration-none" href="index.html">Designer
                 Brian Ebel</a></h1>
             <p class="land-see-hero-caption ampstart-caption mx-auto max-width-3 pt1 mb3">
-              Web designer Brian Ebel uses a unique<br>mix of color, texture, and
-              material to make his websites the must-haves of this year.
+              "Web designer Brian Ebel uses a unique<br> mix of humor, IT knowledge, life experience, color & texture,
+              to make his website
+              the must-haves of this year.
             </p>
             <a class="land-see-hero-button text-decoration-none relative" href="index.html">Read More</a>
           </div>
@@ -3697,8 +3695,9 @@ limitations under the License.
             <h1 class="land-see-hero-title ampstart-title-md"><a class="text-decoration-none" href="index.html">Designer
                 Brian Ebel</a></h1>
             <p class="land-see-hero-caption ampstart-caption mx-auto max-width-3 pt1 mb3">
-              Web designer Brian Ebel uses a unique<br>mix of color, texture, and
-              material to make his websites the must-haves of this year.
+              "Web designer Brian Ebel uses a unique <br>mix of humor, IT knowledge, life experience, color & texture,
+              to make his website
+              the must-haves of this year.
             </p>
             <a class="land-see-hero-button text-decoration-none relative" href="index.html">Read More</a>
           </div>
@@ -3750,8 +3749,9 @@ limitations under the License.
             <h1 class="land-see-hero-title ampstart-title-md"><a class="text-decoration-none"
                 href="index.html">Designer<br>Brian Ebel</a></h1>
             <p class="land-see-hero-caption ampstart-caption mx-auto max-width-3 pt1 mb3">
-              Web designer Brian Ebel uses a unique mix of color, texture, and
-              material to make his websites the must-haves of this year.
+              "Web designer Brian Ebel uses a unique mix of humor, IT knowledge, life experience, color & texture, to
+              make his website
+              the must-haves of this year.
             </p>
             <a class="land-see-hero-button text-decoration-none relative" href="index.html">Read More</a>
           </div>
@@ -3857,8 +3857,9 @@ limitations under the License.
             <h1 class="land-see-hero-title ampstart-title-md"><a class="text-decoration-none" href="index.html">Designer
                 Brian Ebel</a></h1>
             <p class="land-see-hero-caption ampstart-caption mx-auto max-width-3 pt1 mb3">
-              Web designer Brian Ebel uses a unique<br>mix of color, texture, and
-              material to make his websites the must-haves of this year.
+              "Web designer Brian Ebel uses a unique<br> mix of humor, IT knowledge, life experience, color & texture,
+              to make his website
+              the must-haves of this year.
             </p>
             <a class="land-see-hero-button text-decoration-none relative" href="index.html">Read More</a>
           </div>
@@ -4264,7 +4265,6 @@ limitations under the License.
       <ul class="list-reset flex flex-wrap mb3">
         <li class="px1"><a class="text-decoration-none ampstart-label" href="home.amp.html">Shop</a></li>
         <li class="px1"><a class="text-decoration-none ampstart-label" href="#">About</a></li>
-        <li class="px1"><a class="text-decoration-none ampstart-label" href="#">Contact</a></li>
       </ul>
     </nav>
     <small>
