--- a/home.amp.html
+++ b/home.amp.html
@@ -2355,7 +2355,7 @@ limitations under the License.
 
     <ul class="ampstart-social-follow list-reset flex justify-around items-center flex-wrap m0 mb4">
       <li>
-        <a href="#" target="_blank" class="inline-block p1" aria-label="Link to AMP HTML Twitter"><svg
+        <a href="https://x.com/MNNWSPACE" target="_blank" class="inline-block p1" aria-label="Link to AMP HTML Twitter"><svg
             xmlns="http://www.w3.org/2000/svg" width="24" height="22.2" viewBox="0 0 53 49">
             <title>Twitter</title>
             <path
@@ -2364,16 +2364,7 @@ limitations under the License.
           </svg></a>
       </li>
       <li>
-        <a href="#" target="_blank" class="inline-block p1" aria-label="Link to AMP HTML Facebook"><svg
-            xmlns="http://www.w3.org/2000/svg" width="24" height="23.6" viewBox="0 0 56 55">
-            <title>Facebook</title>
-            <path
-              d="M47.5 43c0 1.2-.9 2.1-2.1 2.1h-10V30h5.1l.8-5.9h-5.9v-3.7c0-1.7.5-2.9 3-2.9h3.1v-5.3c-.6 0-2.4-.2-4.6-.2-4.5 0-7.5 2.7-7.5 7.8v4.3h-5.1V30h5.1v15.1H10.7c-1.2 0-2.2-.9-2.2-2.1V8.3c0-1.2 1-2.2 2.2-2.2h34.7c1.2 0 2.1 1 2.1 2.2V43"
-              class="ampstart-icon ampstart-icon-fb"></path>
-          </svg></a>
-      </li>
-      <li>
-        <a href="#" target="_blank" class="inline-block p1" aria-label="Link to AMP HTML Instagram"><svg
+        <a href="https://www.instagram.com/bcebel/" target="_blank" class="inline-block p1" aria-label="Link to AMP HTML Instagram"><svg
             xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 54 54">
             <title>instagram</title>
             <path
