--- a/stories.amp.html
+++ b/stories.amp.html
@@ -3584,7 +3584,7 @@ limitations under the License.
           </svg></a>
       </li>
       <li>
-        <a href="#" target="_blank" class="inline-block p1" aria-label="Link to AMP HTML E-mail"><svg
+        <a href="mailto:bcebel@gmail.com" target="_blank" class="inline-block p1" aria-label="Link to AMP HTML E-mail"><svg
             xmlns="http://www.w3.org/2000/svg" width="24" height="18.4" viewBox="0 0 56 43">
             <title>email</title>
             <path
@@ -3852,7 +3852,7 @@ limitations under the License.
           </svg></a>
       </li>
       <li>
-        <a href="#" target="_blank" class="inline-block p1" aria-label="Link to AMP HTML E-mail"><svg
+        <a href="mailto:bcebel@gmail.com" target="_blank" class="inline-block p1" aria-label="Link to AMP HTML E-mail"><svg
             xmlns="http://www.w3.org/2000/svg" width="24" height="18.4" viewBox="0 0 56 43">
             <title>email</title>
             <path
@@ -3870,7 +3870,7 @@ limitations under the License.
     </nav>
     <small>
       © MINNOWSPACE, 2024 •
-      <a class="text-decoration-none" href="#">Terms &amp; Conditions</a>
+      <a class="text-decoration-none" href="https://www.cj.com/contact-us">Terms &amp; Conditions</a>
     </small>
   </footer>
   <!-- End Footer -->
