removed fashion link

--- a/index.html
+++ b/index.html
@@ -3558,7 +3558,7 @@ limitations under the License.
   <section class="land-see-story-detail relative mx-auto mb4 pt2">
     <div class="mx-auto center land-see-post-item land-see-post-item-wide land-see-story">
       <a class="land-see-post-category land-see-page-navigation underline caps max-width-1 pb1"
-        href="stories.amp.html?category&#x3D;fashion#land-see-fashion">Fashion</a>
+        href="stories.amp.html?category&#x3D;fashion#land-see-fashion"></a>
       <h1 class="land-see-hero-title ampstart-title-lg bold pt2 mx2">
         <a class="text-decoration-none" href="BrianEbel.html">Brian Ebel</a>
       </h1>
