--- a/index.html
+++ b/index.html
@@ -3776,13 +3776,11 @@ limitations under the License.
         <ul class="ampstart-social-follow list-reset flex justify-around items-center flex-wrap m0 mb4">
           <li>
             <a href="https://www.tiktok.com/@m_n_n_w" target="_blank" class="inline-block p1"
-              aria-label="Link to AMP HTML TikTok"><amp-img src="./img/land-see/content/tiktok.png" width="24"
+              aria-label="Link to AMP HTML TikTok"><img src="./img/land-see/content/tiktok.png" width="24"
                 height="23.6" viewBox="0 0 56 55">
                 <title>TikTok</title>
-                <path
-                  d="M47.5 43c0 1.2-.9 2.1-2.1 2.1h-10V30h5.1l.8-5.9h-5.9v-3.7c0-1.7.5-2.9 3-2.9h3.1v-5.3c-.6 0-2.4-.2-4.6-.2-4.5 0-7.5 2.7-7.5 7.8v4.3h-5.1V30h5.1v15.1H10.7c-1.2 0-2.2-.9-2.2-2.1V8.3c0-1.2 1-2.2 2.2-2.2h34.7c1.2 0 2.1 1 2.1 2.2V43"
-                  class="ampstart-icon ampstart-icon-fb"></path>
-                </svg></a>
+           </img>
+                </a>
           </li>
           <li>
             <a href="https://x.com/MNNWSPACE" target="_blank" class="inline-block p1"
@@ -3855,7 +3853,7 @@ limitations under the License.
       <form method="GET" action="index.html" target="_top" class="p0 m0 px3 mb4">
         <fieldset class="border-none p0 m0">
           <h2 class="land-see-subs-heading-text">
-            Weekly inspiration from <span class="bold">Land+See</span>
+            Weekly inspiration from <span class="bold">MINNOWSPACE</span>
           </h2>
 
           <!-- Start Input -->
@@ -3899,13 +3897,11 @@ limitations under the License.
 
       <li>
         <a href="https://www.tiktok.com/@m_n_n_w" target="_blank" class="inline-block p1"
-          aria-label="Link to AMP HTML TikTok"><amp-img src="./img/land-see/content/tiktok.png" width="24" height="23.6"
+          aria-label="Link to AMP HTML TikTok"><img src="./img/land-see/content/tiktok.png" width="24" height="23.6"
             viewBox="0 0 56 55">
             <title>TikTok</title>
-            <path
-              d="M47.5 43c0 1.2-.9 2.1-2.1 2.1h-10V30h5.1l.8-5.9h-5.9v-3.7c0-1.7.5-2.9 3-2.9h3.1v-5.3c-.6 0-2.4-.2-4.6-.2-4.5 0-7.5 2.7-7.5 7.8v4.3h-5.1V30h5.1v15.1H10.7c-1.2 0-2.2-.9-2.2-2.1V8.3c0-1.2 1-2.2 2.2-2.2h34.7c1.2 0 2.1 1 2.1 2.2V43"
-              class="ampstart-icon ampstart-icon-fb"></path>
-            </svg></a>
+ 
+      </img></a>
       </li>
       <li>
         <a href="https://www.instagram.com/bcebel/" target="_blank" class="inline-block p1"
