--- a/land-see.amp.html
+++ b/land-see.amp.html
@@ -4142,7 +4142,7 @@ limitations under the License.
 
       <form method="GET" action="index.html" target="_top" class="p0 m0 px3 mb4">
         <fieldset class="border-none p0 m0">
-          <h2 class="land-see-subs-heading-text">Weekly inspiration from <span class="bold">Land+See</span></h2>
+          <h2 class="land-see-subs-heading-text">Weekly inspiration from <span class="bold">MINNOWSPACE</span></h2>
 
           <!-- Start Input -->
           <div class="ampstart-input inline-block relative m0 p0 mb3 ">
