--- a/index.html
+++ b/index.html
@@ -3776,10 +3776,9 @@ limitations under the License.
         <ul class="ampstart-social-follow list-reset flex justify-around items-center flex-wrap m0 mb4">
           <li>
             <a href="https://www.tiktok.com/@m_n_n_w" target="_blank" class="inline-block p1"
-              aria-label="Link to AMP HTML TikTok"><img src="./img/land-see/content/tiktok.png" width="24"
-                height="23.6" viewBox="0 0 56 55">
+              aria-label="Link to AMP HTML TikTok"><amp-img src="./img/land-see/content/tiktok.png" width="24" height="23.6" layout="fixed">
                 <title>TikTok</title>
-           </img>
+          </amp-img>
                 </a>
           </li>
           <li>
@@ -3897,11 +3896,10 @@ limitations under the License.
 
       <li>
         <a href="https://www.tiktok.com/@m_n_n_w" target="_blank" class="inline-block p1"
-          aria-label="Link to AMP HTML TikTok"><img src="./img/land-see/content/tiktok.png" width="24" height="23.6"
-            viewBox="0 0 56 55">
+          aria-label="Link to AMP HTML TikTok"><amp-img src="./img/land-see/content/tiktok.png" width="24" height="23.6" layout="fixed">
             <title>TikTok</title>
  
-      </img></a>
+      </amp-img></a>
       </li>
       <li>
         <a href="https://www.instagram.com/bcebel/" target="_blank" class="inline-block p1"
