nav to links on sidebar was blocked

--- a/land-see.amp.html
+++ b/land-see.amp.html
@@ -2434,7 +2434,7 @@ limitations under the License.
     }
 
     .ampstart-sidebar .ampstart-sidebar-nav:after {
-      content: "";
+      content: none;
       height: 100px;
       width: 100%;
       position: absolute;
