--- a/index.html
+++ b/index.html
@@ -2433,7 +2433,7 @@ limitations under the License.
     }
 
     .ampstart-sidebar .ampstart-sidebar-nav:after {
-      content: '';
+      content: none;
       height: 100px;
       width: 100%;
       position: absolute;
