--- a/tea.html
+++ b/tea.html
@@ -2346,8 +2346,6 @@ limitations under the License.
     <nav class="ampstart-sidebar-nav ampstart-nav">
       <ul class="list-reset m0 p0 ampstart-label">
         <li class="ampstart-nav-item "><a class="ampstart-nav-link" href="index.html">Home</a></li>
-        <li class="ampstart-nav-item "><a class="ampstart-nav-link" href="menu.amp.html">Menu</a></li>
-        <li class="ampstart-nav-item "><a class="ampstart-nav-link" href="#locations">Locations & Hours</a></li>
       </ul>
     </nav>
 
@@ -2375,7 +2373,7 @@ limitations under the License.
           </svg></a>
       </li>
       <li>
-        <a href="#" target="_blank" class="inline-block p1" aria-label="Link to AMP HTML E-mail"><svg
+        <a href="mailto:bcebel@gmail.com" target="_blank" class="inline-block p1" aria-label="Link to AMP HTML E-mail"><svg
             xmlns="http://www.w3.org/2000/svg" width="24" height="18.4" viewBox="0 0 56 43">
             <title>email</title>
             <path
