--- a/tea.html
+++ b/tea.html
@@ -2508,7 +2508,7 @@ limitations under the License.
 
 
     <small>
-      © Brian Ebel
+      © MINNOWSPACE 2024
     </small>
   </footer>
   <!-- End Footer -->
