responsive photo not updated

--- a/tea.html
+++ b/tea.html
@@ -2392,7 +2392,7 @@ limitations under the License.
     <!-- Start Fullpage Hero -->
     <figure class="ampstart-image-fullpage-hero m0 relative mb4">
       <amp-img width="404" height="720" alt="Welcome to Beck &amp; Galo Modern American Cuisine" layout="responsive"
-        src="./img/themes_2/hero.jpg" media="(max-width: 415px)"></amp-img>
+        src="./img/tea/pexels-minan1398-1624554.jpg" media="(max-width: 415px)"></amp-img>
       <amp-img height="720" alt="Welcome to Your &amp; Lets sell!" layout="fixed-height"
         src="./img/tea/pexels-minan1398-1624554.jpg" media="(min-width: 416px)"></amp-img>
       <figcaption class="absolute top-0 right-0 bottom-0 left-0">
