--- a/index.html
+++ b/index.html
@@ -2688,7 +2688,7 @@ limitations under the License.
       border: none;
     }
 
-    .land-see-arts-culture:before {
+    .land-see-food:before {
       opacity: 0.3;
     }
 
@@ -3421,8 +3421,8 @@ limitations under the License.
                     class="text-decoration-none">Interiors</a>
                 </li>
                 <li class="ampstart-dropdown-item">
-                  <a href="stories.amp.html?category=arts-culture#land-see-arts-culture"
-                    class="text-decoration-none">Arts &amp; Culture</a>
+                  <a href="stories.amp.html?category=arts-culture#land-see-food" class="text-decoration-none">Arts &amp;
+                    Culture</a>
                 </li>
                 <li class="ampstart-dropdown-item">
                   <a href="stories.amp.html?category=popular#land-see-popular" class="text-decoration-none">Popular</a>
@@ -3501,8 +3501,8 @@ limitations under the License.
                     class="text-decoration-none">Interiors</a>
                 </li>
                 <li class="ampstart-dropdown-item">
-                  <a href="stories.amp.html?category=arts-culture#land-see-arts-culture"
-                    class="text-decoration-none">Arts &amp; Culture</a>
+                  <a href="stories.amp.html?category=arts-culture#land-see-food" class="text-decoration-none">Arts &amp;
+                    Culture</a>
                 </li>
                 <li class="ampstart-dropdown-item">
                   <a href="stories.amp.html?category=popular#land-see-popular" class="text-decoration-none">Popular</a>
@@ -3542,8 +3542,9 @@ limitations under the License.
           </svg></a>
       </li>
       <li>
-        <a href="mailto:bcebel@gmail.com" target="_blank" class="inline-block p1" aria-label="Link to AMP HTML E-mail"><svg
-            xmlns="http://www.w3.org/2000/svg" width="24" height="18.4" viewBox="0 0 56 43">
+        <a href="mailto:bcebel@gmail.com" target="_blank" class="inline-block p1"
+          aria-label="Link to AMP HTML E-mail"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="18.4"
+            viewBox="0 0 56 43">
             <title>email</title>
             <path
               d="M10.5 6.4C9.1 6.4 8 7.5 8 8.9v21.3c0 1.3 1.1 2.5 2.5 2.5h34.9c1.4 0 2.5-1.2 2.5-2.5V8.9c0-1.4-1.1-2.5-2.5-2.5H10.5zm2.1 2.5h30.7L27.9 22.3 12.6 8.9zm-2.1 1.4l16.6 14.6c.5.4 1.2.4 1.7 0l16.6-14.6v19.9H10.5V10.3z"
@@ -3776,10 +3777,11 @@ limitations under the License.
         <ul class="ampstart-social-follow list-reset flex justify-around items-center flex-wrap m0 mb4">
           <li>
             <a href="https://www.tiktok.com/@m_n_n_w" target="_blank" class="inline-block p1"
-              aria-label="Link to AMP HTML TikTok"><amp-img src="./img/land-see/content/tiktok.png" width="24" height="23.6" layout="fixed">
+              aria-label="Link to AMP HTML TikTok"><amp-img src="./img/land-see/content/tiktok.png" width="24"
+                height="23.6" layout="fixed">
                 <title>TikTok</title>
-          </amp-img>
-                </a>
+              </amp-img>
+            </a>
           </li>
           <li>
             <a href="https://x.com/MNNWSPACE" target="_blank" class="inline-block p1"
@@ -3793,8 +3795,9 @@ limitations under the License.
           </li>
 
           <li>
-            <a href="mailto:bcebel@gmail.com" target="_blank" class="inline-block p1" aria-label="Link to AMP HTML E-mail"><svg
-                xmlns="http://www.w3.org/2000/svg" width="24" height="18.4" viewBox="0 0 56 43">
+            <a href="mailto:bcebel@gmail.com" target="_blank" class="inline-block p1"
+              aria-label="Link to AMP HTML E-mail"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="18.4"
+                viewBox="0 0 56 43">
                 <title>email</title>
                 <path
                   d="M10.5 6.4C9.1 6.4 8 7.5 8 8.9v21.3c0 1.3 1.1 2.5 2.5 2.5h34.9c1.4 0 2.5-1.2 2.5-2.5V8.9c0-1.4-1.1-2.5-2.5-2.5H10.5zm2.1 2.5h30.7L27.9 22.3 12.6 8.9zm-2.1 1.4l16.6 14.6c.5.4 1.2.4 1.7 0l16.6-14.6v19.9H10.5V10.3z"
@@ -3896,10 +3899,11 @@ limitations under the License.
 
       <li>
         <a href="https://www.tiktok.com/@m_n_n_w" target="_blank" class="inline-block p1"
-          aria-label="Link to AMP HTML TikTok"><amp-img src="./img/land-see/content/tiktok.png" width="24" height="23.6" layout="fixed">
+          aria-label="Link to AMP HTML TikTok"><amp-img src="./img/land-see/content/tiktok.png" width="24" height="23.6"
+            layout="fixed">
             <title>TikTok</title>
- 
-      </amp-img></a>
+
+          </amp-img></a>
       </li>
       <li>
         <a href="https://www.instagram.com/bcebel/" target="_blank" class="inline-block p1"
@@ -3913,8 +3917,9 @@ limitations under the License.
       </li>
 
       <li>
-        <a href="mailto:bcebel@gmail.com" target="_blank" class="inline-block p1" aria-label="Link to AMP HTML E-mail"><svg
-            xmlns="http://www.w3.org/2000/svg" width="24" height="18.4" viewBox="0 0 56 43">
+        <a href="mailto:bcebel@gmail.com" target="_blank" class="inline-block p1"
+          aria-label="Link to AMP HTML E-mail"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="18.4"
+            viewBox="0 0 56 43">
             <title>email</title>
             <path
               d="M10.5 6.4C9.1 6.4 8 7.5 8 8.9v21.3c0 1.3 1.1 2.5 2.5 2.5h34.9c1.4 0 2.5-1.2 2.5-2.5V8.9c0-1.4-1.1-2.5-2.5-2.5H10.5zm2.1 2.5h30.7L27.9 22.3 12.6 8.9zm-2.1 1.4l16.6 14.6c.5.4 1.2.4 1.7 0l16.6-14.6v19.9H10.5V10.3z"
