--- a/land-see.amp.html
+++ b/land-see.amp.html
@@ -2689,7 +2689,7 @@ limitations under the License.
       border: none
     }
 
-    .land-see-arts-culture:before {
+    .land-see-food:before {
       opacity: .3
     }
 
@@ -3431,7 +3431,7 @@ limitations under the License.
           "direction": "alternate",
           "animations": [
             {
-              "selector": ".land-see-arts-culture-anim",
+              "selector": ".land-see-food-anim",
               "delay": "calc(100ms * index())",
               "keyframes": [
                 {"transform": "translateY(0)", "opacity": 1}
@@ -3485,8 +3485,7 @@ limitations under the License.
                     class="text-decoration-none">Fashion</a></li>
                 <li class="ampstart-dropdown-item"><a href="stories.amp.html?category=interiors#land-see-interiors"
                     class="text-decoration-none">Interiors</a></li>
-                <li class="ampstart-dropdown-item"><a
-                    href="stories.amp.html?category=arts-culture#land-see-arts-culture"
+                <li class="ampstart-dropdown-item"><a href="stories.amp.html?category=arts-culture#land-see-food"
                     class="text-decoration-none">Arts &amp; Culture</a></li>
                 <li class="ampstart-dropdown-item"><a href="stories.amp.html?category=popular#land-see-popular"
                     class="text-decoration-none">Popular</a></li>
@@ -3554,8 +3553,7 @@ limitations under the License.
                     class="text-decoration-none">Fashion</a></li>
                 <li class="ampstart-dropdown-item"><a href="stories.amp.html?category=interiors#land-see-interiors"
                     class="text-decoration-none">Interiors</a></li>
-                <li class="ampstart-dropdown-item"><a
-                    href="stories.amp.html?category=arts-culture#land-see-arts-culture"
+                <li class="ampstart-dropdown-item"><a href="stories.amp.html?category=arts-culture#land-see-food"
                     class="text-decoration-none">Arts &amp; Culture</a></li>
                 <li class="ampstart-dropdown-item"><a href="stories.amp.html?category=popular#land-see-popular"
                     class="text-decoration-none">Popular</a></li>
@@ -3573,8 +3571,9 @@ limitations under the License.
 
     <ul class="ampstart-social-follow list-reset flex justify-around items-center flex-wrap m0 mb4">
       <li>
-        <a href="https://x.com/MNNWSPACE" target="_blank" class="inline-block p1" aria-label="Link to AMP HTML Twitter"><svg
-            xmlns="http://www.w3.org/2000/svg" width="24" height="22.2" viewBox="0 0 53 49">
+        <a href="https://x.com/MNNWSPACE" target="_blank" class="inline-block p1"
+          aria-label="Link to AMP HTML Twitter"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="22.2"
+            viewBox="0 0 53 49">
             <title>Twitter</title>
             <path
               d="M45 6.9c-1.6 1-3.3 1.6-5.2 2-1.5-1.6-3.6-2.6-5.9-2.6-4.5 0-8.2 3.7-8.2 8.3 0 .6.1 1.3.2 1.9-6.8-.4-12.8-3.7-16.8-8.7C8.4 9 8 10.5 8 12c0 2.8 1.4 5.4 3.6 6.9-1.3-.1-2.6-.5-3.7-1.1v.1c0 4 2.8 7.4 6.6 8.1-.7.2-1.5.3-2.2.3-.5 0-1 0-1.5-.1 1 3.3 4 5.7 7.6 5.7-2.8 2.2-6.3 3.6-10.2 3.6-.6 0-1.3-.1-1.9-.1 3.6 2.3 7.9 3.7 12.5 3.7 15.1 0 23.3-12.6 23.3-23.6 0-.3 0-.7-.1-1 1.6-1.2 3-2.7 4.1-4.3-1.4.6-3 1.1-4.7 1.3 1.7-1 3-2.7 3.6-4.6"
@@ -3582,8 +3581,9 @@ limitations under the License.
           </svg></a>
       </li>
       <li>
-        <a href="https://www.instagram.com/bcebel/" target="_blank" class="inline-block p1" aria-label="Link to AMP HTML Instagram"><svg
-            xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 54 54">
+        <a href="https://www.instagram.com/bcebel/" target="_blank" class="inline-block p1"
+          aria-label="Link to AMP HTML Instagram"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+            viewBox="0 0 54 54">
             <title>instagram</title>
             <path
               d="M27.2 6.1c-5.1 0-5.8 0-7.8.1s-3.4.4-4.6.9c-1.2.5-2.3 1.1-3.3 2.2-1.1 1-1.7 2.1-2.2 3.3-.5 1.2-.8 2.6-.9 4.6-.1 2-.1 2.7-.1 7.8s0 5.8.1 7.8.4 3.4.9 4.6c.5 1.2 1.1 2.3 2.2 3.3 1 1.1 2.1 1.7 3.3 2.2 1.2.5 2.6.8 4.6.9 2 .1 2.7.1 7.8.1s5.8 0 7.8-.1 3.4-.4 4.6-.9c1.2-.5 2.3-1.1 3.3-2.2 1.1-1 1.7-2.1 2.2-3.3.5-1.2.8-2.6.9-4.6.1-2 .1-2.7.1-7.8s0-5.8-.1-7.8-.4-3.4-.9-4.6c-.5-1.2-1.1-2.3-2.2-3.3-1-1.1-2.1-1.7-3.3-2.2-1.2-.5-2.6-.8-4.6-.9-2-.1-2.7-.1-7.8-.1zm0 3.4c5 0 5.6 0 7.6.1 1.9.1 2.9.4 3.5.7.9.3 1.6.7 2.2 1.4.7.6 1.1 1.3 1.4 2.2.3.6.6 1.6.7 3.5.1 2 .1 2.6.1 7.6s0 5.6-.1 7.6c-.1 1.9-.4 2.9-.7 3.5-.3.9-.7 1.6-1.4 2.2-.7.7-1.3 1.1-2.2 1.4-.6.3-1.7.6-3.5.7-2 .1-2.6.1-7.6.1-5.1 0-5.7 0-7.7-.1-1.8-.1-2.9-.4-3.5-.7-.9-.3-1.5-.7-2.2-1.4-.7-.7-1.1-1.3-1.4-2.2-.3-.6-.6-1.7-.7-3.5 0-2-.1-2.6-.1-7.6 0-5.1.1-5.7.1-7.7.1-1.8.4-2.8.7-3.5.3-.9.7-1.5 1.4-2.2.7-.6 1.3-1.1 2.2-1.4.6-.3 1.6-.6 3.5-.7h7.7zm0 5.8c-5.4 0-9.7 4.3-9.7 9.7 0 5.4 4.3 9.7 9.7 9.7 5.4 0 9.7-4.3 9.7-9.7 0-5.4-4.3-9.7-9.7-9.7zm0 16c-3.5 0-6.3-2.8-6.3-6.3s2.8-6.3 6.3-6.3 6.3 2.8 6.3 6.3-2.8 6.3-6.3 6.3zm12.4-16.4c0 1.3-1.1 2.3-2.3 2.3-1.3 0-2.3-1-2.3-2.3 0-1.2 1-2.3 2.3-2.3 1.2 0 2.3 1.1 2.3 2.3z"
@@ -3591,8 +3591,9 @@ limitations under the License.
           </svg></a>
       </li>
       <li>
-        <a href="mailto:bcebel@gmail.com" target="_blank" class="inline-block p1" aria-label="Link to AMP HTML E-mail"><svg
-            xmlns="http://www.w3.org/2000/svg" width="24" height="18.4" viewBox="0 0 56 43">
+        <a href="mailto:bcebel@gmail.com" target="_blank" class="inline-block p1"
+          aria-label="Link to AMP HTML E-mail"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="18.4"
+            viewBox="0 0 56 43">
             <title>email</title>
             <path
               d="M10.5 6.4C9.1 6.4 8 7.5 8 8.9v21.3c0 1.3 1.1 2.5 2.5 2.5h34.9c1.4 0 2.5-1.2 2.5-2.5V8.9c0-1.4-1.1-2.5-2.5-2.5H10.5zm2.1 2.5h30.7L27.9 22.3 12.6 8.9zm-2.1 1.4l16.6 14.6c.5.4 1.2.4 1.7 0l16.6-14.6v19.9H10.5V10.3z"
@@ -4002,7 +4003,7 @@ limitations under the License.
 
   <section class="land-see-story-categories center items-center">
     <amp-accordion layout="container" disable-session-states="">
-      <section expanded="" class="land-see-stories land-see-arts-culture">
+      <section expanded="" class="land-see-stories land-see-food">
         <h3 class="max-width-4 mx-auto">Arts &amp; Culture</h3>
         <div class="max-width-4 mx-auto">
           <amp-list src="./api/arts-culture-accordion.json" height="430" layout="fixed-height">
@@ -4195,8 +4196,9 @@ limitations under the License.
 
     <ul class="ampstart-social-follow list-reset flex justify-around items-center flex-wrap m0 mb4">
       <li>
-        <a href="https://x.com/MNNWSPACE" target="_blank" class="inline-block p1" aria-label="Link to AMP HTML Twitter"><svg
-            xmlns="http://www.w3.org/2000/svg" width="24" height="22.2" viewBox="0 0 53 49">
+        <a href="https://x.com/MNNWSPACE" target="_blank" class="inline-block p1"
+          aria-label="Link to AMP HTML Twitter"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="22.2"
+            viewBox="0 0 53 49">
             <title>Twitter</title>
             <path
               d="M45 6.9c-1.6 1-3.3 1.6-5.2 2-1.5-1.6-3.6-2.6-5.9-2.6-4.5 0-8.2 3.7-8.2 8.3 0 .6.1 1.3.2 1.9-6.8-.4-12.8-3.7-16.8-8.7C8.4 9 8 10.5 8 12c0 2.8 1.4 5.4 3.6 6.9-1.3-.1-2.6-.5-3.7-1.1v.1c0 4 2.8 7.4 6.6 8.1-.7.2-1.5.3-2.2.3-.5 0-1 0-1.5-.1 1 3.3 4 5.7 7.6 5.7-2.8 2.2-6.3 3.6-10.2 3.6-.6 0-1.3-.1-1.9-.1 3.6 2.3 7.9 3.7 12.5 3.7 15.1 0 23.3-12.6 23.3-23.6 0-.3 0-.7-.1-1 1.6-1.2 3-2.7 4.1-4.3-1.4.6-3 1.1-4.7 1.3 1.7-1 3-2.7 3.6-4.6"
@@ -4204,8 +4206,9 @@ limitations under the License.
           </svg></a>
       </li>
       <li>
-        <a href="https://www.instagram.com/bcebel/" target="_blank" class="inline-block p1" aria-label="Link to AMP HTML Instagram"><svg
-            xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 54 54">
+        <a href="https://www.instagram.com/bcebel/" target="_blank" class="inline-block p1"
+          aria-label="Link to AMP HTML Instagram"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+            viewBox="0 0 54 54">
             <title>instagram</title>
             <path
               d="M27.2 6.1c-5.1 0-5.8 0-7.8.1s-3.4.4-4.6.9c-1.2.5-2.3 1.1-3.3 2.2-1.1 1-1.7 2.1-2.2 3.3-.5 1.2-.8 2.6-.9 4.6-.1 2-.1 2.7-.1 7.8s0 5.8.1 7.8.4 3.4.9 4.6c.5 1.2 1.1 2.3 2.2 3.3 1 1.1 2.1 1.7 3.3 2.2 1.2.5 2.6.8 4.6.9 2 .1 2.7.1 7.8.1s5.8 0 7.8-.1 3.4-.4 4.6-.9c1.2-.5 2.3-1.1 3.3-2.2 1.1-1 1.7-2.1 2.2-3.3.5-1.2.8-2.6.9-4.6.1-2 .1-2.7.1-7.8s0-5.8-.1-7.8-.4-3.4-.9-4.6c-.5-1.2-1.1-2.3-2.2-3.3-1-1.1-2.1-1.7-3.3-2.2-1.2-.5-2.6-.8-4.6-.9-2-.1-2.7-.1-7.8-.1zm0 3.4c5 0 5.6 0 7.6.1 1.9.1 2.9.4 3.5.7.9.3 1.6.7 2.2 1.4.7.6 1.1 1.3 1.4 2.2.3.6.6 1.6.7 3.5.1 2 .1 2.6.1 7.6s0 5.6-.1 7.6c-.1 1.9-.4 2.9-.7 3.5-.3.9-.7 1.6-1.4 2.2-.7.7-1.3 1.1-2.2 1.4-.6.3-1.7.6-3.5.7-2 .1-2.6.1-7.6.1-5.1 0-5.7 0-7.7-.1-1.8-.1-2.9-.4-3.5-.7-.9-.3-1.5-.7-2.2-1.4-.7-.7-1.1-1.3-1.4-2.2-.3-.6-.6-1.7-.7-3.5 0-2-.1-2.6-.1-7.6 0-5.1.1-5.7.1-7.7.1-1.8.4-2.8.7-3.5.3-.9.7-1.5 1.4-2.2.7-.6 1.3-1.1 2.2-1.4.6-.3 1.6-.6 3.5-.7h7.7zm0 5.8c-5.4 0-9.7 4.3-9.7 9.7 0 5.4 4.3 9.7 9.7 9.7 5.4 0 9.7-4.3 9.7-9.7 0-5.4-4.3-9.7-9.7-9.7zm0 16c-3.5 0-6.3-2.8-6.3-6.3s2.8-6.3 6.3-6.3 6.3 2.8 6.3 6.3-2.8 6.3-6.3 6.3zm12.4-16.4c0 1.3-1.1 2.3-2.3 2.3-1.3 0-2.3-1-2.3-2.3 0-1.2 1-2.3 2.3-2.3 1.2 0 2.3 1.1 2.3 2.3z"
@@ -4213,8 +4216,9 @@ limitations under the License.
           </svg></a>
       </li>
       <li>
-        <a href="mailto:bcebel@gmail.com" target="_blank" class="inline-block p1" aria-label="Link to AMP HTML E-mail"><svg
-            xmlns="http://www.w3.org/2000/svg" width="24" height="18.4" viewBox="0 0 56 43">
+        <a href="mailto:bcebel@gmail.com" target="_blank" class="inline-block p1"
+          aria-label="Link to AMP HTML E-mail"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="18.4"
+            viewBox="0 0 56 43">
             <title>email</title>
             <path
               d="M10.5 6.4C9.1 6.4 8 7.5 8 8.9v21.3c0 1.3 1.1 2.5 2.5 2.5h34.9c1.4 0 2.5-1.2 2.5-2.5V8.9c0-1.4-1.1-2.5-2.5-2.5H10.5zm2.1 2.5h30.7L27.9 22.3 12.6 8.9zm-2.1 1.4l16.6 14.6c.5.4 1.2.4 1.7 0l16.6-14.6v19.9H10.5V10.3z"
