categories figuring them out

--- a/index.html
+++ b/index.html
@@ -2815,7 +2815,7 @@ limitations under the License.
     }
 
     .land-see-paging,
-    .land-see-popular-content,
+    .land-see-entertainment-content,
     .land-see-recent-content,
     .land-see-story-nav {
       max-width: 850px;
@@ -2833,7 +2833,7 @@ limitations under the License.
       background: transparent url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='32' viewBox='0 0 16 32' overflow='visible'%3E%3Cpath fill='none' stroke='%23DFDFDF' stroke-miterlimit='10' d='M.354 31.201l15.423-15.424L.354.354'/%3E%3C/svg%3E") no-repeat 50%;
     }
 
-    .land-see-popular-content .amp-carousel-button {
+    .land-see-entertainment-content .amp-carousel-button {
       top: 97px;
       background-size: 35%;
     }
@@ -2851,13 +2851,13 @@ limitations under the License.
     }
 
     @media (min-width: 40.06rem) and (max-width: 52rem) {
-      .land-see-popular-content {
+      .land-see-entertainment-content {
         max-width: 636px;
       }
     }
 
     @media (max-width: 40rem) {
-      .land-see-popular-content {
+      .land-see-entertainment-content {
         max-width: 424px;
       }
     }
@@ -3421,11 +3421,12 @@ limitations under the License.
                     class="text-decoration-none">Interiors</a>
                 </li>
                 <li class="ampstart-dropdown-item">
-                  <a href="stories.amp.html?category=arts-culture#land-see-food" class="text-decoration-none">Arts &amp;
+                  <a href="stories.amp.html?category=food#land-see-food" class="text-decoration-none">Arts &amp;
                     Culture</a>
                 </li>
                 <li class="ampstart-dropdown-item">
-                  <a href="stories.amp.html?category=popular#land-see-popular" class="text-decoration-none">Popular</a>
+                  <a href="stories.amp.html?category=entertainment#land-see-entertainment"
+                    class="text-decoration-none">entertainment</a>
                 </li>
               </ul>
             </section>
@@ -3501,11 +3502,12 @@ limitations under the License.
                     class="text-decoration-none">Interiors</a>
                 </li>
                 <li class="ampstart-dropdown-item">
-                  <a href="stories.amp.html?category=arts-culture#land-see-food" class="text-decoration-none">Arts &amp;
+                  <a href="stories.amp.html?category=food#land-see-food" class="text-decoration-none">Arts &amp;
                     Culture</a>
                 </li>
                 <li class="ampstart-dropdown-item">
-                  <a href="stories.amp.html?category=popular#land-see-popular" class="text-decoration-none">Popular</a>
+                  <a href="stories.amp.html?category=entertainment#land-see-entertainment"
+                    class="text-decoration-none">entertainment</a>
                 </li>
               </ul>
             </section>
@@ -3812,7 +3814,7 @@ limitations under the License.
     </div>
   </section>
 
-  <section class="land-see-popular-content mx-auto">
+  <section class="land-see-entertainment-content mx-auto">
     <h4 class="land-see-section-header ml1">Recommended</h4>
     <div class="clearfix pt2">
       <amp-list class="center justify-center" src="./api/recommended.json" height="460" layout="fixed-height">
